--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,13 @@
-runtime: python
-env: flex
+runtime: python38
+
+instance_class: F1
+
+automatic_scaling:
+  min_instances: 1
+  max_instances: 1
+
 entrypoint: gunicorn -b :$PORT main:app
 
 runtime_config:
     python_version: 3
-
+    
